# try-xrpl

./: CMakeLists.txt  conanfile.py
src/: lib.cpp
